--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <a href="#" class="logo">
-        <img src="./assets/OfficialLogo.png" alt="logo" width="150">
+        <img src="./main/assets/OfficialLogo.png" alt="logo" width="150">
     </a>
 
 
